<resources>
    <string name="app_name">PassThru</string>
    <string name="title_controller">Controller</string>
    <string name="title_config">Configuration</string>
    <string name="title_debug">Debugging</string>
    <string name="controller_btn_connect">Connect</string>
    <string name="controller_btn_disconnect">Disconnect</string>
    <string name="controller_btn_clear">Clear Inputs</string>
    <string name="controller_label_status">Status</string>
    <string name="controller_label_mode">Controller Mode</string>
    <string name="controller_rb_joystick">Joystick</string>
    <string name="controller_rb_mouse">Mouse</string>
    <string name="config_ip_address">IP Address</string>
    <string name="config_port">Port Number</string>
    <string name="config_test">Save</string>
    <string name="config_test_success">Success!</string>
    <string name="config_test_fail">Failed!</string>
    <string name="config_disconnect">Clear</string>
    <string name="debug_axis_x">X-Axis</string>
    <string name="debug_axis_y">Y-Axis</string>
    <string name="debug_axis_z">Z-Axis</string>
    <string name="debug_axis_rx">RX-Axis</string>
    <string name="debug_axis_ry">RY-Axis</string>
    <string name="debug_axis_rz">RZ-Axis</string>
    <string name="debug_throttle">Throttle</string>
    <string name="debug_brake">Brake</string>
    <string name="debug_buttons">Buttons</string>
    <string name="debug_left_trigger">L-Trigger</string>
    <string name="debug_right_trigger">R-Trigger</string>
    <string name="debug_send_signal">Send Motion Signal</string>
    <string name="debug_send_button">Send Button Signal</string>
    <string name="debug_mode_toggle">Debug Mode</string>
</resources>
