<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_controller">

    <fragment
        android:id="@+id/navigation_controller"
        android:name="com.passthru.android.ui.home.ControllerFragment"
        android:label="@string/title_controller"
        tools:layout="@layout/fragment_controller" />

    <fragment
        android:id="@+id/navigation_config"
        android:name="com.passthru.android.ui.dashboard.ConfigFragment"
        android:label="@string/title_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/navigation_debug"
        android:name="com.passthru.android.ui.notifications.DebuggerFragment"
        android:label="@string/title_debug"
        tools:layout="@layout/fragment_debugger" />
</navigation>