<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="694dp"
        android:layout_marginTop="12dp"
        android:dividerPadding="8dp"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home">

        <TextView
            android:id="@+id/tvStatusLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/controller_label_status"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/tvStatusVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="N/A"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btnControllerConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/controller_btn_connect" />

        <Button
            android:id="@+id/btnControllerRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/design_default_color_primary"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/controller_btn_disconnect" />

        <Button
            android:id="@+id/btnControllerClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/darker_gray"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/controller_btn_clear" />

        <TextView
            android:id="@+id/tvControlMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/controller_label_mode"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioGroup
            android:id="@+id/rgControlMode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbJoystick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/controller_rb_joystick" />

            <RadioButton
                android:id="@+id/rbMouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/controller_rb_mouse" />

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>